Added content in header

--- a/src/index.html
+++ b/src/index.html
@@ -11,85 +11,97 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav header__nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              Галерея
+      <div class="left">
+        <nav class="nav header__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Галерея
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Відвідування
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Стати нашим другом
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Про Нас
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Магазин
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Магазин
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="left__text">
+          <p class="left__text__paragraph">
+            ПОДІЇ
+          </p>
+          <div class="left__text__line"></div>
+        </div>
+        <div class="left__center">
+          <h1 class="title left__center__title">
+            ХУДОЖ
+            <br>
+            МУЗЕЙ
+          </h1>
+          <div class="left__button">
+            <a href="#" class="left__button__link">
+              КВИТКИ
             </a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              Виставки та події
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              Відвідування
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              Стати нашим другом
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              Про Нас
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              Магазин
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              Магазин
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">
-              Контакти
-            </a>
-          </li>
-        </ul>
-      </nav>
-
-      <div class="line-text">
-        <p class="line-text__text">
-          ПОДІЇ
-        </p>
-        <div class="line-text__line"></div>
+            <button class="left__button__click">
+              <img
+                src="images/button.svg"
+                alt="button"
+                class="left__button__img"
+              >
+            </button>
+          </div>
+        </div>
       </div>
 
+      <div class="right">
+        <h2 class="namu right__namu">
+          NA<br>MU
+        </h2>
 
-      <div class="header__title">
-        <h1 class="title header__title__main">
-          ХУДОЖ
-          <span class="header__title__main__span">
+        <h1>
+          <span class="title right__span">
             НІЙ
           </span>
-          <br>
-          МУЗЕЙ
         </h1>
-        <button class="header__button">
-          <a href="#" class="button__header__link">
-            КВИТКИ
-          </a>
-          <img
-            src="images/button.svg"
-            alt="button"
-            class="button__header__img"
-          >
-        </button>
-      </div>
 
-      <img
-        src="images/header.png"
-        alt="photo museum"
-        class="header__photo"
-      >
+        <img
+          src="images/header.png"
+          alt="photo museum"
+          class="right__photo"
+        >
+        <h1 class="title right__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+      </div>
 
     </header>
 
@@ -182,7 +194,7 @@
       <div class="container">
         <section class="section">
           <div class="gallery">
-            <h2 class="title__events title">Галерея</h2>
+            <h2 class="title__events title gallery__title">Галерея</h2>
             <div class="gallery__picture">
               <div class="gallery__picture__important">
                 <img
@@ -248,12 +260,14 @@
                   placeholder="Email"
                 >
               </label>
-              <button class="subscription__button">
-                <img
-                  src="images/button.svg"
-                  alt="button"
-                  class="subscription__button__img"
-                >
+              <button href="#email" class="subscription__button">
+                <a href="#email" class="subscription__button__link">
+                  <img
+                    src="images/button.svg"
+                    alt="button"
+                    class="subscription__button__img"
+                  >
+                </a>
               </button>
             </form>
           </div>
