footer for large desctops was created

--- a/src/index.html
+++ b/src/index.html
@@ -340,12 +340,12 @@
       <div class="footer__timetable">
         <h3 class="footer__section-header">Графік роботи</h3>
 
-        <ul class="footer__timtable-list">
-          <li class="footer__timtable-item"><span class="footer__timtable-item--bold">12:00 — 20:00</span> середа</li>
-          <li class="footer__timtable-item"><span class="footer__timtable-item--bold">12:00 — 20:00</span> четвер</li>
-          <li class="footer__timtable-item"><span class="footer__timtable-item--bold">12:00 — 20:00</span> п’ятниця</li>
-          <li class="footer__timtable-item"><span class="footer__timtable-item--bold">11:00 — 19:00</span> субота</li>
-          <li class="footer__timtable-item"><span class="footer__timtable-item--bold">11:00 — 19:00</span> неділя</li>
+        <ul class="footer__timetable-list">
+          <li class="footer__timetable-item"><span class="footer__timetable-item--bold">12:00 — 20:00</span> середа</li>
+          <li class="footer__timetable-item"><span class="footer__timetable-item--bold">12:00 — 20:00</span> четвер</li>
+          <li class="footer__timetable-item"><span class="footer__timetable-item--bold">12:00 — 20:00</span> п’ятниця</li>
+          <li class="footer__timetable-item"><span class="footer__timetable-item--bold">11:00 — 19:00</span> субота</li>
+          <li class="footer__timetable-item"><span class="footer__timetable-item--bold">11:00 — 19:00</span> неділя</li>
           <p class="footer__text">Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею</p>
         </ul>
       </div>
