--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,265 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>National Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="shortcut icon"
+      href="images/logo.svg"
+      type="image/svg">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet">
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="container header__container">
+        <div class="header__top">
+          <div class="header__toggler"></div>
+          <nav class="header__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">Home
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#events" class="nav__link">Актуальні події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#lectures" class="nav__link">
+                Лекції
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#subscribe" class="nav__link">
+                Підписка
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#footer" class="nav__link">
+                Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <a href="#" class="header__logo-link">
+            <img
+              src="images/logo.svg"
+              alt="NaMu logo"
+              class="header__logo">
+          </a>
+        </div>
+        <div class="header__main">
+          <div class="header__text">
+            <h1 class="header__title">ХУДОЖ<span class="header__title-stroke">НІЙ</span>
+              <br>
+              МУЗЕЙ
+            </h1>
+            <a href="#" class="header__tickets-link">
+              <div class="header__tickets">Квитки</div>
+              <div class="header__tickets-square"></div>
+            </a>
+          </div>
+          <div class="header__background"></div>
+        </div>
+        <a href="#events" class="header__side-link side-link">
+          <div class="side-link__line"></div>
+          <div class="side-link__word">події</div>
+        </a>
+      </div>
+    </header>
+    <main class="content">
+      <section class="content__events events" id="events">
+        <div class="container events__contaier">
+          <h2 class="events__title">Актуальні події</h2>
+          <div class="events__content">
+            <div class="events__event event">
+              <img
+                src="/images/events-1.jpg"
+                alt=""
+                class="event__img">
+              <div class="event__info">
+                <div class="event__details">
+                  <h5 class="event__type">Виставка</h5>
+                  <h4 class="event__date">26.08-29.11.2019
+                  </h4>
+                </div>
+                <h3 class="event__title">Йду і повертаюсь
+                </h3>
+                <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </div>
+            <div class="events__event event">
+              <img
+                src="/images/events-2.jpg"
+                alt=""
+                class="event__img">
+              <div class="event__info">
+                <div class="event__details">
+                  <h5 class="event__type">ВИСТАВКА</h5>
+                  <h4 class="event__date">26.08-29.11.2019</h4>
+                </div>
+                <h3 class="event__title">І спогади і мрії</h3>
+                <p class="event__description">Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="content__lecture lecture">
+        <div class="lecture__img"></div>
+        <div class="lecture__info">
+          <div class="lecture__details">
+            <h5 class="lecture__type">лекція</h5>
+            <h4 class="lecture__date">26/08/2019 - 11:00</h4>
+          </div>
+          <div class="lecture_description">
+            <h3 class="lecture__title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="content__gallery gallery container">
+        <div class="gellery__item gallery__item--1"></div>
+        <div class="gellery__item gallery__item--2 gallery__item--wide"></div>
+        <div class="gellery__item gallery__item--3 gallery__item--wide"></div>
+        <div class="gellery__item gallery__item--4"></div>
+        <div class="gellery__item gallery__item--5"></div>
+        <div class="gellery__item gallery__item--6"></div>
+      </section>
+      <section class="subscribe content__subscribe">
+        <div class="subscribe__description">
+          <h2 class="subscribe__title">Підписка</h2>
+          <h6 class="subscribe__subtitle">Бути в курсі всіх актуальних подій та останніх новин.
+          </h6>
+        </div>
+        <form action="#" class="subscribe__form">
+          <input
+            type="text"
+            class="subscribe__input"
+            placeholder="E-mail">
+          <input type="submit" class="subscribe__button">
+        </form>
+      </section>
+    </main>
+    <footer class="footer container">
+      <div class="footer__top">
+        <div class="footer__links">
+          <a href="#" class="footer__main-link">
+            <img
+              src="images/logo.svg"
+              alt="National Museum logo"
+              class="footer__logo">
+          </a>
+          <div class="footer__soc-links">
+            <a href="" class="footer__fb-link">
+              <img
+                src="images/fb.svg"
+                alt="Facebook"
+                class="footer__fb">
+            </a>
+            <a href="" class="footer__ig-link">
+              <img
+                src="images/ig.svg"
+                alt="Instagram"
+                class="footer__ig">
+            </a>
+          </div>
+        </div>
+        <div class="footer__schedule">
+          <p class="footer__schedule-title footer__title">Графік роботи</p>
+          <p class="footer__schedule-description">
+            12:00—  20:00 середа
+            <br>
+            12:00— 20:00 четвер
+            <br>
+            12:00 — 20:00 п’ятниця
+            <br>
+            11:00 — 19:00 субота
+            <br>
+            11:00 — 19:00 неділя
+          </p>
+          <p class="footer__schedule-detailed-description">
+            Вихідні: понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+        <div class="footer_contacts">
+          <p class="footer__title footer__contacts-title">Контакти:</p>
+          <p class="footer__contacts-description">вул. М. Грушевського, 6; Київ, 01001
+            <br>
+            тел.
+            <a
+              href="tel:380442781357"
+              class="footer_phone">
+            +38 (044) 278-13-57
+            </a>
+            <br>
+            факс
+            <a
+              href="fax:380442781357"
+              class="footer_phone">
+            +38 (044) 278-13-57
+            </a>
+            <br>
+            e-mail:
+            <a
+              class="footer__email"
+              href="emailto:info@namu.kiev.ua">
+            info@namu.kiev.ua
+            </a>
+          </p>
+        </div>
+        <div class="footer__nav">
+          <ul class="footer__list">
+            <li class="footer__list-tem">
+              <a href="#gallery" class="footer__nav-link">Галерея</a>
+            </li>
+            <li class="footer__list-tem">
+              <a href="#events" class="footer__nav-link">Виставки та події</a>
+            </li>
+            <li class="footer__list-tem">
+              <a href="#visit" class="footer__nav-link">Відвідування</a>
+            </li>
+            <li class="footer__list-tem">
+              <a href="#friendship" class="footer__nav-link">Стати нашим другом</a>
+            </li>
+            <li class="footer__list-tem">
+              <a href="#about" class="footer__nav-link">Про Нас</a>
+            </li>
+            <li class="footer__list-tem">
+              <a href="#shop" class="footer__nav-link">Магазин</a>
+            </li>
+            <li class="footer__list-tem">
+              <a href="#blog" class="footer__nav-link">Блог</a>
+            </li>
+            <li class="footer__list-tem">
+              <a href="#contacts" class="footer__nav-link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__design">Designed by Zhyriada Marina</p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
