--- a/src/index.html
+++ b/src/index.html
@@ -137,12 +137,16 @@
       </section>
 
       <section class="content__gallery gallery container">
-        <div class="gellery__item gallery__item--1"></div>
-        <div class="gellery__item gallery__item--2 gallery__item--wide"></div>
-        <div class="gellery__item gallery__item--3 gallery__item--wide"></div>
-        <div class="gellery__item gallery__item--4"></div>
-        <div class="gellery__item gallery__item--5"></div>
-        <div class="gellery__item gallery__item--6"></div>
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__grid">
+          <div class="gellery__item gallery__item--1"></div>
+          <div class="gellery__item gallery__item--2 gallery__item--wide"></div>
+          <div class="gellery__item gallery__item--3 gallery__item--wide"></div>
+          <div class="gellery__item gallery__item--4"></div>
+          <div class="gellery__item gallery__item--5"></div>
+          <div class="gellery__item gallery__item--6"></div>
+        </div>
+
       </section>
       <section class="subscribe content__subscribe">
         <div class="subscribe__description">
