--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
 
   <body>
     <header class="header">
+      <!-- <div class="header__background"></div> -->
+
       <div class="container header__container">
         <div class="header__top">
           <div class="header__toggler"></div>
@@ -84,6 +86,7 @@
         </a>
       </div>
     </header>
+
     <main class="content">
       <section class="content__events events" id="events">
         <div class="container events__contaier">
@@ -138,13 +141,88 @@
 
       <section class="content__gallery gallery container">
         <h2 class="gallery__title">Галерея</h2>
+
         <div class="gallery__grid">
-          <div class="gellery__item gallery__item--1"></div>
-          <div class="gellery__item gallery__item--2 gallery__item--wide"></div>
-          <div class="gellery__item gallery__item--3 gallery__item--wide"></div>
-          <div class="gellery__item gallery__item--4"></div>
-          <div class="gellery__item gallery__item--5"></div>
-          <div class="gellery__item gallery__item--6"></div>
+
+          <div class="gellery__item gallery__item--1 gallery-item">
+
+            <div class="gallery-item__info">
+
+              <div class="gallery-item__details">
+                <h5 class="gallery-item__author">Федір Кричевський</h5>
+                <h4 class="gallery-item__date">1910</h4>
+
+              </div>
+
+              <h3 class="gallery-item__title">Наречена</h3>
+            </div>
+          </div>
+
+          <div class="gellery__item gallery__item--2 gallery__item--wide-first gallery-item">
+
+            <div class="gallery-item__info">
+
+              <div class="gallery-item__details">
+                <h5 class="gallery-item__author">Петро Левченко</h5>
+                <h4 class="gallery-item__date">1890 - 1910</h4>
+
+              </div>
+
+              <h3 class="gallery-item__title">Глухомань</h3>
+            </div>
+          </div>
+
+          <div class="gellery__item gallery__item--3 gallery-item">
+            <div class="gallery-item__info">
+
+              <div class="gallery-item__details">
+                <h5 class="gallery-item__author">Костанді Киріак</h5>
+                <h4 class="gallery-item__date">1913</h4>
+
+              </div>
+
+              <h3 class="gallery-item__title">Гуси</h3>
+            </div>
+          </div>
+
+          <div class="gellery__item gallery__item--4 gallery__item--wide-second gallery-item">
+            <div class="gallery-item__info">
+
+              <div class="gallery-item__details">
+                <h5 class="gallery-item__author">Костанді Киріак</h5>
+                <h4 class="gallery-item__date">1890</h4>
+
+              </div>
+
+              <h3 class="gallery-item__title">Сонячний день</h3>
+            </div>
+          </div>
+
+          <div class="gellery__item gallery__item--5 gallery-item">
+            <div class="gallery-item__info">
+
+              <div class="gallery-item__details">
+                <h5 class="gallery-item__author">Микола Глущенко</h5>
+                <h4 class="gallery-item__date">1970</h4>
+
+              </div>
+
+              <h3 class="gallery-item__title">На морі</h3>
+            </div>
+          </div>
+
+          <div class="gellery__item gallery__item--6 gallery-item">
+            <div class="gallery-item__info">
+
+              <div class="gallery-item__details">
+                <h5 class="gallery-item__author">Костянтин Трутовський</h5>
+                <h4 class="gallery-item__date">1881</h4>
+
+              </div>
+
+              <h3 class="gallery-item__title">Весільний викуп</h3>
+            </div>
+          </div>
         </div>
 
       </section>
@@ -163,6 +241,7 @@
         </form>
       </section>
     </main>
+
     <footer class="footer container">
       <div class="footer__top">
         <div class="footer__links">
