--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,7 @@
               <div class="header__tickets-square"></div>
             </a>
           </div>
+
           <div class="header__background"></div>
         </div>
         <a href="#events" class="header__side-link side-link">
@@ -126,7 +127,7 @@
         </div>
       </section>
 
-      <section class="content__lecture lecture">
+      <section class="content__lecture lecture" id="lecture">
         <div class="lecture__img"></div>
         <div class="lecture__info">
           <div class="lecture__details">
@@ -139,7 +140,7 @@
         </div>
       </section>
 
-      <section class="content__gallery gallery container">
+      <section class="content__gallery gallery container" id="gallery">
         <h2 class="gallery__title">Галерея</h2>
 
         <div class="gallery__grid">
@@ -158,7 +159,7 @@
             </div>
           </div>
 
-          <div class="gellery__item gallery__item--2 gallery__item--wide-first gallery-item">
+          <div class="gellery__item gallery__item--2 gallery__item--wide gallery__item--wide-first gallery-item">
 
             <div class="gallery-item__info">
 
@@ -185,7 +186,7 @@
             </div>
           </div>
 
-          <div class="gellery__item gallery__item--4 gallery__item--wide-second gallery-item">
+          <div class="gellery__item gallery__item--4 gallery__item--wide gallery__item--wide-second gallery-item">
             <div class="gallery-item__info">
 
               <div class="gallery-item__details">
@@ -226,7 +227,8 @@
         </div>
 
       </section>
-      <section class="subscribe content__subscribe">
+
+      <section class="subscribe content__subscribe" id="subscribe">
         <div class="subscribe__description">
           <h2 class="subscribe__title">Підписка</h2>
           <h6 class="subscribe__subtitle">Бути в курсі всіх актуальних подій та останніх новин.
@@ -236,14 +238,20 @@
           <input
             type="text"
             class="subscribe__input"
-            placeholder="E-mail">
-          <input type="submit" class="subscribe__button">
+            placeholder="E-mail"
+            onfocus="this.placeholder=''">
+          <input
+            type="submit"
+            class="subscribe__button"
+            value="">
         </form>
       </section>
     </main>
 
     <footer class="footer container">
+
       <div class="footer__top">
+
         <div class="footer__links">
           <a href="#" class="footer__main-link">
             <img
@@ -251,6 +259,7 @@
               alt="National Museum logo"
               class="footer__logo">
           </a>
+
           <div class="footer__soc-links">
             <a href="" class="footer__fb-link">
               <img
@@ -266,52 +275,60 @@
             </a>
           </div>
         </div>
+
         <div class="footer__schedule">
           <p class="footer__schedule-title footer__title">Графік роботи</p>
           <p class="footer__schedule-description">
-            12:00—  20:00 середа
+            <strong>12:00 — 20:00 </strong>
+            середа
             <br>
-            12:00— 20:00 четвер
+            <strong>12:00 — 20:00 </strong>
+            четвер
             <br>
-            12:00 — 20:00 п’ятниця
+            <strong>12:00 — 20:00 </strong>
+            п’ятниця
             <br>
-            11:00 — 19:00 субота
+            <strong>11:00 — 19:00 </strong>
+            субота
             <br>
-            11:00 — 19:00 неділя
+            <strong>11:00 — 19:00 </strong>
+            неділя
           </p>
           <p class="footer__schedule-detailed-description">
-            Вихідні: понеділок, вівторок
+            <strong>Вихідні:</strong> понеділок, вівторок
+            <br>
             Каса припиняє роботу за 1 годину
             до закриття музею
           </p>
         </div>
-        <div class="footer_contacts">
+        <div class="footer__contacts">
           <p class="footer__title footer__contacts-title">Контакти:</p>
           <p class="footer__contacts-description">вул. М. Грушевського, 6; Київ, 01001
             <br>
             тел.
             <a
               href="tel:380442781357"
-              class="footer_phone">
+              class="footer__contacts-link footer__phone">
             +38 (044) 278-13-57
             </a>
             <br>
             факс
             <a
               href="fax:380442781357"
-              class="footer_phone">
+              class="footer__contacts-link footer__fax">
             +38 (044) 278-13-57
             </a>
             <br>
             e-mail:
             <a
-              class="footer__email"
+              class="footer__contacts-link footer__email"
               href="emailto:info@namu.kiev.ua">
             info@namu.kiev.ua
             </a>
           </p>
         </div>
-        <div class="footer__nav">
+
+        <nav class="footer__nav">
           <ul class="footer__list">
             <li class="footer__list-tem">
               <a href="#gallery" class="footer__nav-link">Галерея</a>
@@ -323,10 +340,10 @@
               <a href="#visit" class="footer__nav-link">Відвідування</a>
             </li>
             <li class="footer__list-tem">
-              <a href="#friendship" class="footer__nav-link">Стати нашим другом</a>
+              <a href="#subscribe" class="footer__nav-link">Стати нашим другом</a>
             </li>
             <li class="footer__list-tem">
-              <a href="#about" class="footer__nav-link">Про Нас</a>
+              <a href="#" class="footer__nav-link">Про Нас</a>
             </li>
             <li class="footer__list-tem">
               <a href="#shop" class="footer__nav-link">Магазин</a>
@@ -338,13 +355,14 @@
               <a href="#contacts" class="footer__nav-link">Контакти</a>
             </li>
           </ul>
-        </div>
+        </nav>
       </div>
       <div class="footer__bottom">
         <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
         <p class="footer__design">Designed by Zhyriada Marina</p>
       </div>
     </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
