made skeleton of header, made block actual, made sceleton of block lecture

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+  <body class="body">
+    <header class="header body__header">
+      <nav class="nav header__nav">
+        <h2 class="nav__logo">na<br>mu</h2>
+
+        <input
+          type="checkbox"
+          class="nav__toggler"
+          id="nav-toggler"
+        >
+
+        <label class="nav__toggler-label" for="nav-toggler">
+          <span class="nav__span"></span>
+        </label>
+
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#">Галерея</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="" class="nav__link">Виставки та події</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="" class="nav__link">Відвідування</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="" class="nav__link">Cтати нашим другом</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="" class="nav__link">Про Нас</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="" class="nav__link">Магазин</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="" class="nav__link">Блог</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="" class="nav__link">Контакти</a>
+          </li>
+        </ul>
+
+        <a class="nav__search" href="#">
+          <img src="images/search.svg" alt="search">
+        </a>
+      </nav>
+
+      <h1 class="header__article">
+        худож<span class="header__article-span">ній</span>
+        <br> музей
+      </h1>
+
+      <a class="header__tickets" href="#">
+        <div class="header__tickets-text">квитки</div>
+        <div class="header__tickets-area">
+          <img
+            class="header__tickets-img"
+            src="images/header__tickets-img.svg"
+            alt="buy tickets"
+          >
+        </div>
+      </a>
+
+      <img
+        class="header__mainImg"
+        src="images/headerImg.png"
+        alt="photo of museum"
+      >
+
+      <div class="header__sideImg">
+        <div class="header__sideImg-line"></div>
+        <div class="header__sideImg-text">події</div>
+      </div>
+    </header>
+
+    <main class="main body__main">
+      <div class="actual main__actual">
+        <h3 class="actual__article">Актуальні події</h3>
+
+        <div class="actual__firstBlock">
+          <img
+            class="actual__firstImg"
+            src="images/firstImg.png"
+            alt="Картина із колекції українського мистецтва другої
+              половини 1980-1995 років"
+          >
+
+          <div class="actual__text">
+            <p class="actual__exposure">
+              виставка <span class="actual__date">26.08-29.11.2019</span>
+            </p>
+
+            <div class="actual__name-wrapper">
+              <h4 class="actual__name">Йду і повертаюсь</h4>
+              <div class="actual__redSquare"></div>
+            </div>
+
+            <p class="actual__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="actual__secondBlock">
+          <img
+            class="actual__secondImg"
+            src="images/secondImg.png"
+            alt="Картина Тетяни Яблонської"
+          >
+
+          <div class="actual__text">
+            <p class="actual__exposure">
+              виставка <span class="actual__date">26.08-29.11.2019</span>
+            </p>
+
+            <div class="actual__name-wrapper">
+              <h4 class="actual__name">І спогади, і мрії</h4>
+              <div class="actual__redSquare"></div>
+            </div>
+
+            <p class="actual__description">
+              Національний художній музей України до 100 річчя від дня народження
+              видатної української художниці Тетяни Яблонської відкриває
+              ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="lecture main__lecture">
+        <div class="lecture__text">
+          <p class="lecture__lecture">лекція</p>
+
+          <p class="lecture__date">26/08/2019 - 11:00</p>
+
+          <h4 class="lecture__article">
+            Від класицизму до романтизму
+          </h4>
+        </div>
+      </div>
+    </main>
   </body>
+
 </html>
