--- a/src/index.html
+++ b/src/index.html
@@ -109,6 +109,7 @@
                 <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
               </div>
             </div>
+
             <div class="events__event event">
               <img
                 src="/images/events-2.jpg"
@@ -145,7 +146,9 @@
 
         <div class="gallery__grid">
 
-          <div class="gellery__item gallery__item--1 gallery-item">
+          <div
+            class="gellery__item gallery__item--1 gallery-item gallery__item--high"
+          >
 
             <div class="gallery-item__info">
 
@@ -173,7 +176,7 @@
             </div>
           </div>
 
-          <div class="gellery__item gallery__item--3 gallery-item">
+          <div class="gellery__item gallery__item--3 gallery-item gallery__item--high ">
             <div class="gallery-item__info">
 
               <div class="gallery-item__details">
@@ -303,7 +306,9 @@
         </div>
         <div class="footer__contacts">
           <p class="footer__title footer__contacts-title">Контакти:</p>
-          <p class="footer__contacts-description">вул. М. Грушевського, 6; Київ, 01001
+          <p class="footer__contacts-description">вул. М. Грушевського, 6;
+            <br>
+            Київ, 01001
             <br>
             тел.
             <a
