--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
+
     <header class="header">
       <div class="header__content">
         <div class="header__position">
@@ -116,6 +117,92 @@
         </div>
       </div>
     </header>
+
+    <section class="section">
+      <h1 class="section__title">Актуальні події</h1>
+      <div class="gallery">
+
+        <article class="gallery__position">
+          <div class="gallery__photos">
+            <img
+              class="gallery__photo"
+              src="images/gallery/up.png"
+              alt="gallery photo"
+            >
+          </div>
+          <div class="gallery__description">
+            <p class="gallery__exhibition">
+              ВИСТАВКА
+              <a href="#" class="gallery__link">
+                26.08-29.11.2019
+              </a>
+            </p>
+            <h2 class="gallery__name">
+              Йду і повертаюсь
+            </h2>
+            <p class="gallery__text">
+              Національний Художній Музей України
+              презентує унікальну частину колекції
+              Градобанку - українське мистецтво другої
+              половини
+              <br>
+              1980-1995 років.
+            </p>
+          </div>
+        </article>
+
+        <article class="gallery__position gallery__position--end">
+          <div class="gallery__description">
+            <p class="gallery__exhibition">
+              ВИСТАВКА
+              <a href="#" class="gallery__link">
+                26.08-29.11.2019
+              </a>
+            </p>
+            <h2 class="gallery__name">
+              І спогади і мрії
+            </h2>
+            <p class="gallery__text">
+              Національний художній музей України
+              до 100 річчя від дня народження
+              видатної української художниці
+              Тетяни Яблонської відкриває ретроспективну
+              ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+          <div class="gallery__photos gallery__photos--second">
+            <img
+              class="gallery__photo"
+              src="images/gallery/down.png"
+              alt="gallery photo"
+            >
+          </div>
+        </article>
+
+      </div>
+
+    </section>
+
+    <section class="fon">
+      <div class="fon__container">
+        <img
+          src="images/Fon.png"
+          class="fon__photo"
+          alt="Fon photo"
+        >
+      </div>
+      <div class="fon__title">
+        <p class="gallery__exhibition gallery__exhibition--fon">
+          ЛЕКЦІЯ
+          <a href="#" class="gallery__link gallery__link--fon">
+            26/08/2019 - 11:00
+          </a>
+        </p>
+        <h2 class="gallery__name gallery__name--fon">
+          Від класицизму до романтизму
+        </h2>
+      </div>
+    </section>
 
   </body>
 </html>
