--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>NAMU</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;600;700&display=swap"
+          rel="stylesheet"
+    >
+    <link rel="stylesheet" href="styles/index.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <header class="header page__header">
+
+      <div class="container header__container">
+        <div class="header__burger-wrapper">
+          <div class="header__burger"></div>
+        </div>
+
+        <a href="#" class="logo header__logo">
+          NA
+          <br>
+          MU
+        </a>
+      </div>
+
+
+      <nav class="nav header__nav">
+        <div class="container nav__container">
+          <a href="#" class="logo nav__logo">
+            NA
+            <br>
+            MU
+          </a>
+          <ul class="nav__list">
+            <li class="nav__list-item">
+              <a href="#gallery" class="nav__link">Галерея</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="#contact" class="nav__link">Виставки та події</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="#about" class="nav__link">Відвідування</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="#shop" class="nav__link">Стати нашим другом</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="#contact" class="nav__link">Про Нас</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="#about" class="nav__link">Магазин</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="#shop" class="nav__link">Блог</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="#shop" class="nav__link">Контакти</a>
+            </li>
+          </ul>
+
+          <a href="#" class="nav__search">
+            <svg
+              class="nav__search-ico"
+              width="18"
+              height="18"
+            >
+              <use href="./images/ico.svg#search"></use>
+            </svg>
+          </a>
+        </div>
+      </nav>
+    </header>
+
+    <main class="main page__main">
+      <section class="hero page__hero">
+        <div class="hero__img"></div>
+        <div class="hero__content">
+          <div class="decor-side hero__decor-side">події</div>
+          <h1 class="hero__heading">
+            худож<span class="hero__heading-clip">ній</span>
+            <br>
+            музей
+          </h1>
+          <a href="# " class="btn hero__btn">
+            <span class="btn__text">квитки</span>
+            <span class="btn__arrow">
+              <svg
+                class="btn__arrow-img"
+                width="8"
+                height="12"
+              >
+                <use href="./images/ico.svg#btn-arrow"></use>
+              </svg>
+            </span>
+          </a>
+        </div>
+      </section>
+    </main>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
