--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,177 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">  </head>
   <body>
     <div class="wrapper">
       <header class="header">
-        
+        <div class="header__container">
+          <div class="header__burger burger">
+            <input type="checkbox" id="check-menu">
+            <label class="burger__label" for="check-menu"></label>
+            <div class="burger__line burger__line--1"></div>
+            <div class="burger__line burger__line--2"></div>
+            <div class="burger__line burger__line--3"></div>
+            <div class="burger__line burger__line--4"></div>
+            <nav class="burger__menu">
+              <a class="burger__link burger__link--1" href="#shop">Shop</a>
+              <a class="burger__link" href="#contact-us">Contact</a>
+              <a class="burger__link" href="#about">About</a>
+            </nav>
+          </div>
+          <div class="header__logo logo">NA<br>MU</div>
+          <div class="header__side-text"></div>
+          <p class="header__events">ПОДІЇ</p>
+          <h1 class="header__name">ХУДОЖ<span class="header__name-transparent">НІЙ</span></span><br>МУЗЕЙ</h1>
+          <a class="header__tickets" href="#">КВИТКИ</a>
+          <div class="header__image">
+            <img src="./images/museum_photo.png" alt="Museum picture">
+          </div>
+        </div>
       </header>
-      <main class="main"></main>
-      <footer class="footer"></footer>
+      <main class="main">
+        <section class="events">
+          <h2 class="events__title">Актуальні події</h2>
+          <div class="events__event-card-1 event-card">
+            <img 
+              class="event-card__image events__event-card-1--left-image" 
+              src="images/events_1.png" 
+              alt="events picture"
+            >
+            <div class="event-card__description events__event-card-1--right-desc">
+              <div class="event-card__description-title">
+                <p class="event-card__description-type">ВИСТАВКА</p>
+                <p class="event-card__description-date">26.08-29.11.2019</p>
+              </div>
+                <p class="event-card__description-name">Йду і повертаюсь</p>
+                <p class="event-card__description-details">
+                  Національний Художній Музей 
+                  України презентує унікальну 
+                  частину колекції Градобанку - українське
+                  мистецтво другої половини 1980-1995 років.
+                </p>
+            </div>
+          </div>
+          <!--  -->
+          <div class="events__event-card-2 event-card">
+            <img 
+              class="event-card__image events__event-card-2--right-image"
+              src="images/events_2.png"
+              alt="events picture"
+              >
+            <div class="event-card__description events__event-card-2--left-desc">
+              <div class="event-card__description-title">
+                <p class="event-card__description-type">ВИСТАВКА</p>
+                <p class="event-card__description-date">26.08-29.11.2019</p>
+              </div>
+                <p class="event-card__description-name">І спогади і мрії</p>
+                <p class="event-card__description-details">
+                  Національний художній музей України до
+                  100 річчя від дня народження
+                  видатної української художниці
+                  Тетяни Яблонської відкриває ретроспективну
+                  ювілейну виставку «І спогади і мрії».
+                </p>
+            </div>
+          </div>
+        </section>
+        <section class="main-event">
+          <div class="main-event__image">
+            <img src="images/view.png" alt="even picture">
+          </div>
+          <div class="main-event__description">
+            <div class="main-event__description-title">
+              <p class="main-event__description-type">ЛЕКЦІЯ</p>
+              <p class="main-event__description-date">26/08/2019 - 11:00</p>
+            </div>
+              <p class="main-event__description-name">Від класицизму до романтизму</p>
+          </div>
+        </section>
+        <section class="gallery">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__items">
+            <div class="gallery__item">
+              <img src="images/gallery1.png" alt="gallery picture">
+            </div>
+            <div class="gallery__item gallery__item--big">
+              <img src="images/gallery2.png" alt="gallery picture">
+            </div>
+            <div class="gallery__item gallery__item--big">
+              <img src="images/gallery3.png" alt="gallery picture">
+            </div>
+            <div class="gallery__item">
+              <img src="images/gallery4.png" alt="gallery picture">
+            </div>
+          </div>
+        </section>
+        <section class="subscription">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__details">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form class="subscription__form" action="#">
+            <label for="subscribe"></label>
+            <input class="subscription__input" name="subscribe" type="email" placeholder="E-mail">
+            <button class="subscription__button" type="submit"></button>      
+          </form>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="footer__logo logo">
+          NA<br>MU
+        </div>
+        <div class="footer__media">
+          <a href="#">
+            <img src="images/media_facebook.svg" alt="facebook link">
+          </a>
+          <a href="#">
+            <img src="images/medias_insta.svg" alt="instagram link">
+          </a>
+        </div>
+        <div class="footer__copyright">Copyright &copy; 2019. All Rights Reserved.</div>
+        <div class="footer__schedule">
+          <div class="footer__schedule-title">
+            Графік роботи
+          </div>
+          <div class="footer__schedule-main">
+            <strong>12:00 — 20:00</strong> середа<br>
+            <strong>12:00 — 20:00</strong> четвер<br>
+            <strong>12:00 — 20:00</strong> п’ятниця<br>
+            <strong>11:00 — 19:00</strong> субота<br>
+            <strong>11:00 — 19:00</strong> неділя<br>
+          </div>
+          <div class="footer__schedule-details">
+            Вихідні понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </div>
+        </div>
+        <div class="footer__contacts">
+          <div class="footer__contacts-title">
+            Контакти
+          </div>
+          <div class="footer__contacts-details">
+            вул. М. Грушевського, 6; Київ, 01001
+            тел. +38 (044) 278-13-57
+            факс +38 (044) 278-74-54
+            e-mail: info@namu.kiev.ua
+          </div>
+        </div>
+        <div class="footer__nav-site">
+          <a href="" class="footer__nav-site-link">Галерея</a>
+          <a href="" class="footer__nav-site-link">Виставки та події</a>
+          <a href="" class="footer__nav-site-link">Відвідування</a>
+          <a href="" class="footer__nav-site-link">Стати нашим другом</a>
+        </div>
+        <div class="footer__nav-general">
+          <a href="" class="footer__nav-general-link">Про Нас</a>
+          <a href="" class="footer__nav-general-link">Магазин</a>
+          <a href="" class="footer__nav-general-link">Блог</a>
+          <a href="" class="footer__nav-general-link">Контакти</a>
+        </div>
+      </footer>
     </div>
     <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
   </body>
