--- a/src/index.html
+++ b/src/index.html
@@ -4,61 +4,147 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+          crossorigin="anonymous"
+    >
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700;800&family=Oswald&display=swap" rel="stylesheet">
     <link rel="icon" href="./images/NA MU.png">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
     <header class="header">
-
       <input type="checkbox"
                name="toggler"
                id="menu"
                class="header__toggler"
         >
-      <label for="menu" class="header__btn">
-        <span class="header__btn-item"></span>
-      </label>
+        <label for="menu" class="header__btn">
+          <span class="header__btn-item"></span>
+        </label>
 
-      <div class="menu header__menu">
-        <img
-        src="./images/NA MU.png"
-        class="menu__logo logo" alt="logo namu"
-        >
-        <nav class="nav menu__nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#" class="nav__link">Галерея</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Виставки та події</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Відвідування</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Стати нашим другом</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Про Нас</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Магазин</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Блог</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Контакти</a>
-            </li>
-          </ul>
-        </nav>
-        <a href="#" class="menu__search fas fa-search"></a>
-        
+        <div class="menu header__menu">
+          <img
+          src="./images/NA MU.png"
+          class="menu__logo logo" alt="logo namu"
+         >
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Відвідування</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Стати нашим другом</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Магазин</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Блог</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <a href="#" class="menu__search fas fa-search"></a>
+        </div>
 
     </header>
+    <main>
+
+      <section class="capital">
+
+        <div class="capital__information">
+          <h1 class="capital__title">
+            худож<span class="capital__title--empty">ній</span><br>музей
+          </h1>
+          <a href="#" class="capital__item ">квитки
+            <div class="capital__button button"></div>
+          </a>
+        </div>
+        <div class="capital__image"></div>
+
+      </section>
+
+      <div class="container">
+
+        <section class="events">
+
+          <span class="events__text">події</span>
+          <h2 class="events__title">Актуальні події</h2>
+
+          <div class="events__item">
+            <img src="./images/event-1.png"
+            alt="landscape"
+            class="events__picture"
+            >
+            <div class="events__descr descr">
+              <div class="descr__main">
+                <span class="descr__info">виставка</span>
+                <span class="descr__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="descr__title">Йду і повертаюсь</h3>
+              <p class="descr__text">
+                Національний Художній Музей України презентує унікальну
+                частину колекції Градобанку - українське мистецтво другої
+                половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="events__item events__item--reverse">
+            <img src="./images/event-2.png"
+            alt="girl with peacock"
+            class="events__picture"
+            >
+            <div class="events__descr descr events__descr--rev">
+              <div class="descr__main">
+                <span class="descr__info">виставка</span>
+                <span class="descr__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="descr__title">І спогади і мрії</h3>
+              <p class="descr__text">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+
+        </section>
+
+      </div>
+
+      <section class="lecture">
+
+        <div class="lecture__background">
+          <div class="lecture__item">
+            <div class="lecture__head">
+              <div class="lecture__info">ЛЕКЦІЯ</div>
+              <div class="lecture__time">26/08/2019 - 11:00</div>
+            </div>
+            <h3 class="lecture__text">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+
+      </section>
+
+
+    </main>
+
+
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
