--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">  </head>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  </head>
   <body>
     <div class="wrapper">
       <header class="header">
@@ -39,9 +40,9 @@
         <section class="events">
           <h2 class="events__title">Актуальні події</h2>
           <div class="events__event-card-1 event-card">
-            <img 
-              class="event-card__image events__event-card-1--left-image" 
-              src="images/events_1.png" 
+            <img
+              class="event-card__image events__event-card-1--left-image"
+              src="images/events_1.png"
               alt="events picture"
             >
             <div class="event-card__description events__event-card-1--right-desc">
@@ -49,18 +50,18 @@
                 <p class="event-card__description-type">ВИСТАВКА</p>
                 <p class="event-card__description-date">26.08-29.11.2019</p>
               </div>
-                <p class="event-card__description-name">Йду і повертаюсь</p>
-                <p class="event-card__description-details">
-                  Національний Художній Музей 
-                  України презентує унікальну 
-                  частину колекції Градобанку - українське
-                  мистецтво другої половини 1980-1995 років.
-                </p>
+              <p class="event-card__description-name">Йду і повертаюсь</p>
+              <p class="event-card__description-details">
+                Національний Художній Музей
+                України презентує унікальну
+                частину колекції Градобанку - українське
+                мистецтво другої половини 1980-1995 років.
+              </p>
             </div>
           </div>
           <!--  -->
           <div class="events__event-card-2 event-card">
-            <img 
+            <img
               class="event-card__image events__event-card-2--right-image"
               src="images/events_2.png"
               alt="events picture"
@@ -70,14 +71,14 @@
                 <p class="event-card__description-type">ВИСТАВКА</p>
                 <p class="event-card__description-date">26.08-29.11.2019</p>
               </div>
-                <p class="event-card__description-name">І спогади і мрії</p>
-                <p class="event-card__description-details">
-                  Національний художній музей України до
-                  100 річчя від дня народження
-                  видатної української художниці
-                  Тетяни Яблонської відкриває ретроспективну
-                  ювілейну виставку «І спогади і мрії».
-                </p>
+              <p class="event-card__description-name">І спогади і мрії</p>
+              <p class="event-card__description-details">
+                Національний художній музей України до
+                100 річчя від дня народження
+                видатної української художниці
+                Тетяни Яблонської відкриває ретроспективну
+                ювілейну виставку «І спогади і мрії».
+              </p>
             </div>
           </div>
         </section>
@@ -90,7 +91,7 @@
               <p class="main-event__description-type">ЛЕКЦІЯ</p>
               <p class="main-event__description-date">26/08/2019 - 11:00</p>
             </div>
-              <p class="main-event__description-name">Від класицизму до романтизму</p>
+            <p class="main-event__description-name">Від класицизму до романтизму</p>
           </div>
         </section>
         <section class="gallery">
@@ -115,8 +116,12 @@
           <p class="subscription__details">Бути в курсі всіх актуальних подій та останніх новин.</p>
           <form class="subscription__form" action="#">
             <label for="subscribe"></label>
-            <input class="subscription__input" name="subscribe" type="email" placeholder="E-mail">
-            <button class="subscription__button" type="submit"></button>      
+            <input
+              class="subscription__input"
+              id="subscribe" name="subscribe"
+              type="email"
+              placeholder="E-mail">
+            <button class="subscription__button" type="submit"></button>
           </form>
         </section>
       </main>
