--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,66 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="shortcut icon" href="images/icon.svg">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header"></header>
+
+    <main>
+      <section class="events">
+        <div class="events__container container">
+          <div class="events__title title">
+            Актуальні події
+          </div>
+          <article class="events__exhibition exhibition">
+            <img
+              class="exhibition__image"
+              src="images/events-1.png"
+              alt="volley near the sea"
+            >
+            <div class="exhibition__content">
+              <div class="exhibition__heading">
+                <div class="exhibition__type">ВИСТАВКА</div>
+                <div class="exhibition__date">26.08-29.11.2019</div>
+              </div>
+              <div class="exhibition__name">Йду і повертаюсь
+              </div>
+              <div class="exhibition__description">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </div>
+            </div>
+          </article>
+
+          <article class="events__exhibition exhibition">
+            <img
+              class="exhibition__image"
+              src="images/events-2.png"
+              alt="ukrainian girl"
+            >
+            <div class="exhibition__content">
+              <div class="exhibition__heading">
+                <div class="exhibition__type">ВИСТАВКА</div>
+                <div class="exhibition__date">26.08-29.11.2019</div>
+              </div>
+              <div class="exhibition__name">І спогади і мрії
+              </div>
+              <div class="exhibition__description">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни
+                Яблонської  відкриває ретроспективну ювілейну
+                виставку «І спогади і мрії».
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
