--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,61 @@
           </a>
         </div>
       </section>
+
+      <div class="container">
+        <section class="page__actual actual">
+          <h2 class="actual__heading">
+            Актуальні події
+          </h2>
+
+          <article class="post actual__post">
+            <img
+              src="./images/post-img-1.jpg"
+              alt="some paint"
+              class="post__img"
+              width="280"
+              height="210"
+            >
+
+            <div class="post__content">
+              <div class="post__desc">
+                <span class="post__desc-type">виставка</span>
+                <span class="post__desc-date">26.08-29.11.2019</span>
+              </div>
+
+              <h3 class="post__heading">Йду і повертаюсь</h3>
+
+              <p class="post__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980&#8209;1995 років.
+              </p>
+            </div>
+          </article>
+
+          <article class="post post_reverse actual__post">
+            <img
+              src="./images/post-img-2.jpg"
+              alt="some paint"
+              class="post__img"
+              width="280"
+              height="210"
+            >
+
+            <div class="post__content">
+              <div class="post__desc">
+                <span class="post__desc-type">виставка</span>
+                <span class="post__desc-date">26.08-29.11.2019</span>
+              </div>
+
+              <h3 class="post__heading">І спогади і мрії</h3>
+
+              <p class="post__text">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці
+                Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+        </section>
+      </div>
     </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
