--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,8 @@
 
       <div class="container">
         <section class="page__actual actual">
+          <div class="decor-side actual__decor-side">події</div>
+
           <h2 class="actual__heading">
             Актуальні події
           </h2>
@@ -114,9 +116,9 @@
             >
 
             <div class="post__content">
-              <div class="post__desc">
-                <span class="post__desc-type">виставка</span>
-                <span class="post__desc-date">26.08-29.11.2019</span>
+              <div class="post__desc desc">
+                <span class="desc__type">виставка</span>
+                <span class="desc__date">26.08-29.11.2019</span>
               </div>
 
               <h3 class="post__heading">Йду і повертаюсь</h3>
@@ -137,9 +139,9 @@
             >
 
             <div class="post__content">
-              <div class="post__desc">
-                <span class="post__desc-type">виставка</span>
-                <span class="post__desc-date">26.08-29.11.2019</span>
+              <div class="desc post__desc">
+                <span class="desc__type">виставка</span>
+                <span class="desc__date">26.08-29.11.2019</span>
               </div>
 
               <h3 class="post__heading">І спогади і мрії</h3>
@@ -152,6 +154,15 @@
           </article>
         </section>
       </div>
+      <section class="page__promo promo">
+        <div class="promo__content">
+          <div class="desc promo__desc">
+            <span class="desc__type">лекція</span>
+            <span class="desc__date">26/08/2019 - 11:00</span>
+          </div>
+          <h3 class="promo__heading">Від класицизму до романтизму</h3>
+        </div>
+      </section>
     </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
