--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
             Актуальні події
           </h2>
 
-          <article class="post actual__post">
+          <article class="post actualz">
             <img
               src="./images/post-img-1.jpg"
               alt="some paint"
@@ -163,6 +163,94 @@
           <h3 class="promo__heading">Від класицизму до романтизму</h3>
         </div>
       </section>
+
+      <div class="container">
+        <section class="page__gallery gallery">
+          <h2 class="gallery__heading">Галерея</h2>
+          <div class="gallery__slider">
+            <img
+              src="./images/gallery-img-1.jpg"
+              alt="some picture"
+              class="gallery__img gallery__img_1"
+              width="280"
+              height="410"
+            >
+            <img
+              src="./images/gallery-img-2.jpg"
+              alt="some picture"
+              class="gallery__img gallery__img_2"
+              width="280"
+              height="410"
+            >
+            <img
+              src="./images/gallery-img-3.jpg"
+              alt="some picture"
+              class="gallery__img gallery__img_3"
+              width="280"
+              height="410"
+            >
+            <img
+              src="./images/gallery-img-4.jpg"
+              alt="some picture"
+              class="gallery__img gallery__img_4"
+              width="280"
+              height="410"
+            >
+            <img
+              src="./images/gallery-img-5.jpg"
+              alt="some picture"
+              class="gallery__img gallery__img_5"
+              width="280"
+              height="410"
+            >
+            <img
+              src="./images/gallery-img-6.jpg"
+              alt="some picture"
+              class="gallery__img gallery__img_6"
+              width="280"
+              height="410"
+            >
+          </div>
+          <div class="gallery__bullets">
+            <input
+              type="radio"
+              name="gallery"
+              value="1"
+              id="1"
+              class="gallery__input"
+              checked
+            >
+            <label for="1" class="gallery__bullet"></label>
+
+            <input
+              type="radio"
+              name="gallery"
+              value="2"
+              id="2"
+              class="gallery__input"
+            >
+            <label for="2" class="gallery__bullet"></label>
+
+            <input
+              type="radio"
+              name="gallery"
+              value="3"
+              id="3"
+              class="gallery__input"
+            >
+            <label for="3" class="gallery__bullet"></label>
+
+            <input
+              type="radio"
+              name="gallery"
+              value="4"
+              id="4"
+              class="gallery__input"
+            >
+            <label for="4" class="gallery__bullet"></label>
+          </div>
+        </section>
+      </div>
     </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
