2 bugs were fixed

--- a/src/index.html
+++ b/src/index.html
@@ -235,7 +235,7 @@
         </div>
 
         <div class="galery__dots">
-          <div class="galery__dot galeru__dot--active"></div>
+          <div class="galery__dot galery__dot--active"></div>
           <div class="galery__dot"></div>
           <div class="galery__dot"></div>
           <div class="galery__dot"></div>
