--- a/src/index.html
+++ b/src/index.html
@@ -251,6 +251,31 @@
           </div>
         </section>
       </div>
+
+      <section class="page__subscribe subscribe">
+        <h2 class="subscribe__heading">Підписка</h2>
+        <p class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form action="./index.html" class="subscribe__form">
+          <input
+            type="email"
+            class="subscribe__input"
+            placeholder="E-mail"
+            required
+          >
+          <button type="submit" class="subscribe__btn">
+            <svg
+              class="btn__arrow-img"
+              width="8"
+              height="12"
+            >
+              <use href="./images/ico.svg#btn-arrow"></use>
+            </svg>
+          </button>
+        </form>
+      </section>
     </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
