fixed by recommendation

--- a/src/index.html
+++ b/src/index.html
@@ -67,15 +67,19 @@
       <div class="cutaway container__cutaway">
         <div class="cutaway__image">
           <h1 class="cutaway__image-name">ХУДОЖ<span class="cutaway__image-transparent">НІЙ</span> МУЗЕЙ</h1>
-          <div class="cutaway__ticket">
+          <!-- <div class="cutaway__ticket">
             <a href="#bottom" class="cutaway__ticket-text">КВИТКИ</a>
             <a href="#bottom" class="cutaway__ticket-button"></a>
-          </div>
+          </div> -->
           <div class="cutaway__decor">
             ПОДІЇ
           </div>
         </div>
 
+        <div class="cutaway__ticket">
+          <a href="#bottom" class="cutaway__ticket-text">КВИТКИ</a>
+          <a href="#bottom" class="cutaway__ticket-button"></a>
+        </div>
 
       </div>
 
